# gary

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  go.mod  go.sum  main.go
.github/workflows/: checks.yaml  unit-tests.yml
common/: Cargo.toml  README.md
common/src/: cluster_api.rs  comm.rs  config.rs  data.rs  yaml.rs
common/src/plugins/: mod.rs  runtime.rs  scheduler.rs
common/src/tests/: mod.rs  test_deploy.yaml
core/: Cargo.toml
core/src/: cluster_api.rs  comm.rs  config.rs  data.rs  defaults.rs  lib.rs  network.rs  runtime.rs  yaml.rs
core/src/plugins/: mod.rs  runtime.rs
core/src/tests/: mod.rs  test_config.yaml  test_deploy.yaml
docs/: architecture.md  basic_cluster_arch.md  cluster_membership_basics_gossip.drawio  community.md  deployment_leader_election.md  user_guide.md
executor/: Cargo.toml
executor/docker/: Cargo.toml
executor/process/: Cargo.toml
executor/process.bak/: main.rs
executor/process/src/: lib.rs  process_executor.rs
executor/src/: lib.rs
exp/cacher/: Cargo.toml
exp/cmd/warm-standby/: warm-standby.go
gary/: Cargo.toml  build.rs
gary-cri/: Cargo.toml
gary-zmq/: Cargo.toml
gary-zmq/examples/: async.rs
gary-zmq/src/: cluster_api.rs  cluster_communication.rs  lib.rs
gary/src/: cli.rs  cluster_management.rs  deployment_management.rs  main.rs  runtime_plugin_manager.rs
garyctl/: Cargo.toml
garyctl/src/: main.rs
nng_comm/: Cargo.toml
node_comm/: Cargo.toml
node_comm/nng_comm/: Cargo.toml
node_comm/src/: comm.rs  data.rs  lib.rs  main.rs
plugins/gary-plugin-cri/: Cargo.toml  Cargo.yoml  README.md  build.rs
plugins/gary-plugin-cri/src/: lib.rs
plugins/gary-plugin-cri/src/kubernetes/cri/proto/: api.proto
plugins/gary-plugin-docker/: Cargo.toml  README.md
plugins/gary-plugin-docker/src/: lib.rs
plugins/gary-scheduler/: Cargo.toml
proto/: helloworld.proto
src/: .client.rs.swp  cli.rs  client.rs  cluster_api.rs  cluster_management.rs  deployment_management.rs  main.rs  server.rs
zmq_comm/: Cargo.toml
