[package]
name = "gary"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[features]

[dependencies]
clap = "2.33.0"
core = { path = "core"}
gary-zmq = { path = "gary-zmq" }
daemonize = "0.4.1"
log = "0.4.6"
tokio = "0.1.21"
zmq = "0.9"
serde_cbor = "0.9.0"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6.5"