[package]
name = "gary"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[features]

[dependencies]
clap = "2.33.0"
core = { path = "core"}
gary-zmq = { path = "gary-zmq" }
daemonize = "0.4.1"
log = "0.4.6"
chrono = "0.4"

[workspace]

members = [
    "core",
    "gary-zmq",
    "garyctl",
    "executor",
    "executor/process",
    "executor/docker",
]
