[package]
name = "gary-core"
version = "0.0.1"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"
description = "core components shared by all things gary"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
serde_derive = "1.0"
serde_cbor = "0.9"
chrono = { version = "0.4", features = ["serde"] }
whoami = "0.5.2"
