[package]
name = "gary-zmq"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

[dependencies]
zmq = "0.9"
core = { path = "../core", package = "gary-core"}
daemonize = "0.4.1"
log = "0.4.6"
tokio = "0.1.21"
serde_cbor = "0.9.0"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6.5"

[features]
default = ['vendored-zmq']
vendored-zmq = ['zmq/vendored']

