[package]
name = "gary-zmq"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"

[dependencies]
zmq = "0.9"
common = { path = "../common", package = "gary-common"}
daemonize = "0.4.1"
log = "0.4.6"
tokio = "0.1.21"
serde_cbor = "0.11.1"
serde = { version = "1.0.114", features = ["derive"]}
serde_derive = "1.0.114"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.6.5"

[features]
default = ['vendored-zmq']
vendored-zmq = ['zmq/vendored']

