[package]
name = "gary-plugin-docker"
version = "0.0.2"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"
description = "simple docker plugin for gary"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../../common" , version = "0.0.1", package = "gary-common"}
bollard = "0.3"
tokio = "0.1"
futures = "0.1"
