[package]
name = "gary-scheduler"
version = "0.1.0"
authors = ["Marek Counts <mcounts@suse.com>"]
edition = "2018"
description = "simple docker plugin for gary"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
